--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,6 +64,20 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --nav-scroll-height: 70px;
 }
 
+@-webkit-keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -71,6 +85,19 @@ ORDER: Base + typography > general layout + grid > page layout > components
   }
   80% {
     transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@-webkit-keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  80% {
+    transform: translateX(-1rem);
   }
   100% {
     opacity: 1;
@@ -90,6 +117,16 @@ ORDER: Base + typography > general layout + grid > page layout > components
     transform: translate(0);
   }
 }
+@-webkit-keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 @keyframes moveInBottom {
   0% {
     opacity: 0;
@@ -100,15 +137,23 @@ ORDER: Base + typography > general layout + grid > page layout > components
     transform: translate(0);
   }
 }
-@keyframes fadeInUp {
+@-webkit-keyframes fadeInUp {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
   }
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
     transform: translate3d(0, 0, 0);
   }
 }
@@ -137,6 +182,11 @@ html {
   html {
     font-size: 75%;
   }
+}
+
+::-moz-selection {
+  background-color: var(--lightest-navy);
+  color: var(--lightest-slate);
 }
 
 ::selection {
@@ -202,7 +252,10 @@ body.blur #content > * {
   filter: blur(5px) brightness(0.7);
   transition: var(--transition);
   pointer-events: none;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 #root {
@@ -215,7 +268,8 @@ body.blur #content > * {
 a {
   display: inline-block;
   text-decoration: none;
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
   position: relative;
   transition: var(--transition);
   color: var(--green);
@@ -266,7 +320,8 @@ body {
 }
 
 .heading-primary {
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   margin-bottom: 6rem;
 }
 .heading-primary--main {
@@ -315,7 +370,6 @@ body {
 
 .section-heading {
   display: flex;
-  -webkit-box-align: center;
   align-items: center;
   position: relative;
   color: var(--white);
@@ -500,7 +554,6 @@ body {
   margin-bottom: 0rem;
   padding: 1.5rem 4rem;
   border-radius: 10rem;
-  -webkit-transition: all 0.2s;
   transition: all 0.2s;
   font-size: var(--fonts-xs);
   background-color: var(--green);
@@ -544,6 +597,24 @@ body {
   transition: all 0.4s;
 }
 
+.add-button {
+  padding: 0.5rem 1rem;
+  border-radius: 3px;
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  background-color: var(--dark-navy);
+  font-size: var(--fonts-md);
+  color: var(--white);
+  transition: all 0.3s;
+}
+.add-button:hover {
+  background-color: var(--navy);
+}
+.add-button:active {
+  transform: scale(0.95);
+}
+
 .contact-form__group {
   display: flex;
   justify-content: center;
@@ -581,6 +652,12 @@ body {
 .contact-form__input::-webkit-input-placeholder {
   color: var(--lightest-navy);
   font-size: var(--fonts-xs);
+}
+.contact-form__input:not(:-moz-placeholder-shown) {
+  background-color: var(--white);
+}
+.contact-form__input:not(:-ms-input-placeholder) {
+  background-color: var(--white);
 }
 .contact-form__input:not(:placeholder-shown) {
   background-color: var(--white);
@@ -632,8 +709,12 @@ header {
   background-color: var(--navy);
   filter: none !important;
   pointer-events: auto !important;
-  user-select: auto !important;
-  backdrop-filter: blur(10px);
+  -webkit-user-select: auto !important;
+     -moz-user-select: auto !important;
+      -ms-user-select: auto !important;
+          user-select: auto !important;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   transition: var(--transition);
 }
 header .scroll-up {
@@ -767,7 +848,10 @@ nav .logo a:hover:after, nav .logo a:focus:after {
 nav .logo a svg {
   fill: none;
   transition: var(--transition);
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 nav .nav--links {
   display: flex;
@@ -1146,6 +1230,15 @@ nav .nav--links .login-button-main {
   background-color: transparent;
 }
 
+@-webkit-keyframes bottomUp {
+  from {
+    transform: translateY(5rem);
+  }
+  to {
+    transform: translateY(0rem);
+  }
+}
+
 @keyframes bottomUp {
   from {
     transform: translateY(5rem);
@@ -1353,7 +1446,6 @@ leaflet-popup-content-wrapper,
   padding: 2rem 4rem;
   border-radius: 3px;
   font-weight: 550;
-  -webkit-transition: all 0.2s;
   transition: all 0.3s;
   font-size: var(--fonts-xs);
   background-color: var(--dark-slate);
@@ -1397,7 +1489,8 @@ leaflet-popup-content-wrapper,
 .paper-container {
   max-height: calc(100vh - var(--nav-height) - 10rem);
   z-index: 100;
-  min-width: 80vw;
+  max-width: 80vw;
+  background-color: var(--light-slate);
 }
 .paper-container .links {
   display: flex;
@@ -1857,6 +1950,4 @@ leaflet-popup-content-wrapper,
     max-width: 100%;
     height: auto;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
