--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -109,3 +109,23 @@
     transition: all 0.4s;
   }
 }
+
+.add-button {
+  padding: 0.5rem 1rem;
+  border-radius: 3px;
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  background-color: var(--dark-navy);
+  font-size: var(--fonts-md);
+  color: var(--white);
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: var(--navy);
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+}
