Feat: finish project-form UI page
Last thing is to dispatch action on submit-form

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -507,6 +507,7 @@ body {
   line-height: 1;
   text-decoration: none;
   transition: var(--transition);
+  cursor: pointer;
 }
 .small-button:hover, .small-button:focus, .small-button:active {
   background-color: var(--green-tint);
