Fix: fix utils module exports

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -18,6 +18,7 @@
   --slate: #8892b0;
   --light-slate: #a8b2d1;
   --lightest-slate: rgb(204, 214, 246);
+  --lightesttt-slate:rgb(226, 230, 241);
   --lightest-slate-rgba: rgba(204, 214, 246, 0.7);
   --white: #e6f1ff;
   --green-light: #64ffda;
