--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -150,6 +150,10 @@
     padding: 10rem 4rem;
   }
 
+  .nav-admin {
+    margin-right: 1rem;
+  }
+
   .section-about {
     padding: 10rem 4rem 0rem 4rem;
   }
