--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -28,15 +28,16 @@
 
   
   --main-fonts: "Calibre", "Open Sans", sans-serif;
+  --fonts-sans: "Times", sans-serif;
   --logo-fonts: "Open Sans", "sans-serif"
   --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
 
   // Font size
   --fonts-xxxs: 1em;
   --fonts-xxs: 1.2em;
-  --tabs-size: 1.3rem;
-  --fonts-xs: 1.4rem;
-  --fonts-sm: 1.6rem;
+  --tabs-size: 1.6rem;
+  --fonts-xs: 1.5rem;
+  --fonts-sm: 1.7rem;
   --fonts-md: 2rem;
   --fonts-lg: 2.4rem;
   --fonts-xl: 3.2rem;
