--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -66,7 +66,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   background-color: var(--navy);
-  font-family: var(--font-sans);
+  font-family: var(--main-fonts);
   line-height: 1.3;
   counter-reset: my-section;
 
