--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
   border-radius: var(--border-radius);
   padding: 0.75rem 1rem;
   font-size: var(--fonts-xs);
-  font-family: var(--font-mono);
+  font-family: var(--fonts-sans);
   line-height: 1;
   text-decoration: none;
   transition: var(--transition);
