--- a/src/styles/pages/_hero.scss
+++ b/src/styles/pages/_hero.scss
@@ -14,7 +14,7 @@
 
   &__description-text {
     font-size: var(--fonts-md);
-    line-height: 1.3;
+    line-height: 1.5;
     color: var(--light-slate);
     animation: bottomUp 1s;
     -webkit-animation: bottomUp 1s;
@@ -22,10 +22,12 @@
 
   &__contact-button {
     padding: 0.8rem 3.6rem;
+    letter-spacing: 0.5px;
     border-radius: 100px;
     background-color: var(--green);
     display: inline-block;
     font-size: var(--fonts-sm);
+    font-family: var(--fonts-sans);
     font-weight: 500;
 
     animation: bottomUp 1s;
@@ -41,10 +43,20 @@
   & a {
     color: var(--dark-navy);
 
+    &:hover {
+      & div {
+        color: var(--white) !important;
+      }
+    }
+
     &:hover:after {
       width: 0%;
       background-color: transparent;
     }
+  }
+
+  & div {
+    margin-top: 2px;
   }
 }
 
