--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -150,6 +150,10 @@
     padding: 10rem 4rem;
   }
 
+  .section-projects{
+     padding: 20rem 4rem 10rem 4rem;
+   }
+
   .nav-admin {
     margin-right: 1rem;
   }
@@ -190,7 +194,7 @@
   }
 
   .section-projects {
-    padding: 10rem 3rem;
+    padding: 15rem 3rem;
   }
 
   .project-container {
