--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -14,7 +14,7 @@
   }
 
   .section-projects {
-    padding: 10rem 16rem;
+    padding: 15rem 16rem;
   }
 }
 
@@ -35,7 +35,7 @@
   }
 
   .section-projects {
-    padding: 10rem 16rem;
+    padding: 15rem 16rem;
   }
 
   .project-container {
@@ -58,7 +58,7 @@
   }
 
   .section-projects {
-    padding: 10rem 15rem;
+    padding: 15rem 15rem;
   }
 
   .experience__jobs-tab {
@@ -87,11 +87,6 @@
         width: 100%;
         overflow: visible;
       }
-    }
-
-    .section-experience {
-      min-height: 70vh;
-      max-height: 100vh;
     }
   }
 
@@ -128,7 +123,7 @@
 
 @include respond(tab-port-small) {
   .section-projects {
-    padding: 10rem 10rem;
+    padding: 15rem 10rem;
   }
 
   .section-about {
@@ -150,9 +145,9 @@
     padding: 10rem 4rem;
   }
 
-  .section-projects{
-     padding: 20rem 4rem 10rem 4rem;
-   }
+  .section-projects {
+    padding: 25rem 4rem 10rem 4rem;
+  }
 
   .nav-admin {
     margin-right: 1rem;
@@ -194,7 +189,7 @@
   }
 
   .section-projects {
-    padding: 15rem 3rem;
+    padding: 35rem 3rem 15rem 3rem;
   }
 
   .project-container {
@@ -224,11 +219,11 @@
   }
 }
 
-@media only screen and (max-width: 595px) {
+@media only screen and (max-width: 745px) {
   .MuiTabs-root {
     min-width: 120% !important;
     max-width: auto !important;
-    padding: 0;
+    padding: 0 !important;
     margin-bottom: 4rem;
   }
 
