Fix fonts size on mui forms

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -35,6 +35,7 @@
   // Font size
   --fonts-xxxs: 1em;
   --fonts-xxs: 1.2em;
+  --fonts-mui-size: 1.4rem;
   --tabs-size: 1.6rem;
   --fonts-xs: 1.5rem;
   --fonts-sm: 1.7rem;
