--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -140,13 +140,16 @@
   @include grid_on_verySmallScreen;
   .section-experience,
   .section-hero,
-  .section-contact,
-  .section-projects {
+  .section-contact {
     padding: 10rem 4rem;
   }
 
   .section-projects {
-    padding: 25rem 4rem 10rem 4rem;
+    padding: 13rem 4rem 10rem 4rem;
+  }
+
+  .section-experience {
+    min-height: 50vh;
   }
 
   .nav-admin {
@@ -189,7 +192,7 @@
   }
 
   .section-projects {
-    padding: 35rem 3rem 15rem 3rem;
+    padding: 15rem 3rem 15rem 3rem;
   }
 
   .project-container {
@@ -216,6 +219,18 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .section-projects {
+    padding: 25rem 3rem 15rem 3rem;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .section-projects {
+    margin: 20rem 3rem 15rem 3rem;
   }
 }
 
