--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -39,6 +39,7 @@ nav {
   .nav--links {
     display: flex;
     align-items: center;
+    letter-spacing: 0.5px;
 
     & ol {
       @include flex-between;
@@ -48,7 +49,6 @@ nav {
 
       & li {
         counter-increment: item 1;
-        margin: 0 5px;
         position: relative;
         font-size: var(--fonts-sm);
 
@@ -77,12 +77,11 @@ nav {
     .login-button-main {
       margin-top: 0.5rem;
       @include flex_center;
-      margin-left: 10px;
       font-size: var(--fonts-xs);
     }
 
     .login-button-main {
-      margin-left: 30px;
+      margin-left: 10px;
       border: 1px solid var(--not-found-shade);
       color: var(--not-found-shade);
     }
