Feat: add cassandra, mongoDB and Node.js/Express.js skills

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -61,6 +61,10 @@ nav {
           &:hover,
           &:focus {
             color: var(--green);
+
+            &::after {
+              margin-top: 3px;
+            }
           }
         }
 
